--- a/src/app/app.json
+++ b/src/app/app.json
@@ -1,8 +1,8 @@
 {
   "name": "App Function with Public URL",
-  "description": "This is an example private app that deploys a placeholder serverless function with public URL.",
-  "uid": "test_appfunction_url",
-  "scopes": ["crm.objects.contacts.read", "crm.objects.contacts.write"],
+  "description": "This is an example private app that deploys a configurable-reponse-time dummy serverless function with public URL, for rate limit testing purposes.",
+  "uid": "delay_endpoint",
+  "scopes": [],
   "public": false,
   "extensions": {}
 }
